# github-action-example-python

./: .commitlintrc.yaml  .dockerignore  .gitignore  .hadolint.yaml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .yamllint  Containerfile  Dockerfile  LICENSE  README.md  action.py  action.yaml  cli.py  constraints.txt  main.py  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: action.yaml  ci.yaml  container.yaml  demo-helloworld-0.yaml  demo-helloworld-1.yaml  demo-helloworld-2.yaml  demo-helloworld-3.yaml  demo-helloworld-4.yaml  demo-httpcats-1.yaml  demo-httpcats-2.yaml  demo-httpcats-3.yaml  demo-httpcats-4.yaml  test.yaml
.jupyter/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
demo/helloworld/0/: Dockerfile  README.md  action.py  action.yaml  main.py
demo/helloworld/1/: Dockerfile  README.md  action.yaml  main.py
demo/helloworld/2/: Dockerfile  README.md  action.py  action.yaml
demo/helloworld/3/: README.md  action.yaml  main.py
demo/helloworld/4/: README.md  action.yaml  main.py
demo/httpcats/1/: README.md  action.yaml  main.py  pyproject.toml
demo/httpcats/2/: Dockerfile  README.md  action.yaml  main.py
demo/httpcats/3/: README.md  action.py  action.yaml  main.py  pyproject.toml
demo/httpcats/4/: README.md  action.yaml  main.py  pyproject.toml
