[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
]

[project]
name = "github-action-example-python"
version = "0"
description = "GitHub Actions Example with Python"
readme = "README.md"
keywords = [
  "github actions",
]
license = {text = "Apache Software License"}
authors = [{name = "Carlos Meza", email = "hire@carlosmeza.com"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "httpx~=0.25.0",
]
[project.urls]
"Home-page" = "https://github.com/xsc27/github-action-example-python"
[project.scripts]
httpcats = "main:run"

[tool.setuptools]
py-modules = ["main"]
